+backupTypes: app.kubernetes.io/name=postgresql

--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,10 @@ backupTypes:
   - labelSelector: app.kubernetes.io/name=mysql
     command: mysqldump -u root -p$MYSQL_ROOT_PASSWORD $MYSQL_DATABASE
     suffix: .sql
-  - labelSelector: app.kubernetes.io/name=wordpress
-    # corev1.Pod.Spec.Containers[].VolumeMounts[]
-    command: tar cf - -C /bitnami/wordpress .
-    suffix: .tar
+  - labelSelector: app.kubernetes.io/name=postgresql
+    command: PGPASSWORD=$POSTGRES_PASSWORD pg_dump -U $POSTGRES_USER -w $POSTGRES_DB
+    suffix: .sql
+#  - labelSelector: app.kubernetes.io/name=wordpress
+#    # corev1.Pod.Spec.Containers[].VolumeMounts[]
+#    command: tar cf - -C /bitnami/wordpress .
+#    suffix: .tar
