gitlab ci build kubackup: use image: golang:1.19 specific version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 
 build kubackup:
   stage: buildapp
-  image: golang:latest
+  image: golang:1.19
   script:
     - go mod init kubackup
     - go mod tidy
