--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+export KUBACKUP_CONFIG=/etc/kubackup/config.yaml
 export AWS_ACCESS_KEY_ID=accesskey
 export AWS_SECRET_ACCESS_KEY=secretkey
 export S3_ENDPOINT=https://s3.endpoint.foo.bar/
