--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  IMAGE_TAG: v0.2
+  IMAGE_TAG: honza801/kubackup:v0.2
 
 stages:
   - buildapp
@@ -24,7 +24,8 @@ build docker image:
   dependencies:
     - build kubackup
   script:
+    - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_AUTH\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:${IMAGE_TAG}"
+      --destination "${IMAGE_TAG}"
