--- a/k8s/rbac.yaml
+++ b/k8s/rbac.yaml
@@ -1,6 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
-automountServiceAccountToken: false
 metadata:
   name: kubackup
 ---
@@ -14,13 +13,18 @@ rules:
   resources:
   - namespaces
   - pods
-  - pods/attach
-  - pods/exec
   - pods/status
   verbs:
   - get
   - list
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/attach
+  - pods/exec
+  verbs:
+  - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
