--- a/env.example
+++ b/env.example
@@ -4,3 +4,6 @@ export AWS_SECRET_ACCESS_KEY=secretkey
 export S3_ENDPOINT=https://s3.endpoint.foo.bar/
 export S3_BUCKET=kubackup
 
+# Optionally
+#export AES_ENCRYPT_KEY="1234567890abcdef"
+
